sumo/tests/sumo/errors/duplicates/net_depart_lane/errors.sumo
Error: Lane's '1to2_1' edge already has a depart lane.
Error: An unknown lane ('1to2_1') was tried to be set as incoming to junction '2'.
Error: Trying to close connections of an unknown lane ('1to2_1').
Quitting (on error).
